--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,38 @@
 body {
   min-height: 100vh;
-  --mainBackground: #ebebeb;
+  --mainBackground: #fff;
   background: var(--mainBackground);
 }
 
 .App {
   font-family: sans-serif;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 367px 1fr;
+}
+
+.sidebar--wrapper {
+  background: #f7f8fa;
+}
+
+.sidebar--inner, .sidebar__contextual {
+  position: fixed;
+  width: 367px;
+  background: #f7f8fa;
+  padding: 24px;
+  min-height: 100vh;
+  height: 100%;
+  overflow: auto;
+  transition: left 0.3s ease;
+}
+
+.sidebar__contextual {
+  top: 0;
+  left: -367px;
+  background: blue;
+}
+
+.sidebar__contextual--open {
+  left: 0;
 }
 
 .button {
@@ -23,6 +47,7 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  position: relative;
 }
 
 .color-wheel {
