--- a/src/styles.css
+++ b/src/styles.css
@@ -69,7 +69,8 @@ body {
 .color-wheel--dot--wrapper {
   height: var(--segmentSize);
   margin-left: var(--segmentOffset);
-  width: var(--dotSize);
+  /* width: var(--dotSize); */
+  width: 24px;
   transform-origin: center bottom;
   position: absolute;
   /* background: var(--dotBackground); */
@@ -79,7 +80,7 @@ body {
   width: var(--dotSize);
   height: var(--dotSize);
   border-radius: var(--dotBorderRadius);
-  transition: all 0.3s ease;
+  transition: outline 0.3s ease;
   outline-offset: 2px;
   outline: 2px solid var(--mainBackground);
   background: var(--dotBackground);
