--- a/src/styles.css
+++ b/src/styles.css
@@ -60,10 +60,10 @@ body {
   height: var(--size);
   border-radius: 50%;
   position: absolute;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  outline: 1px solid;
 }
 
 .color-wheel--dot--wrapper {
