--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,13 @@
+html {
+  font-family: "Inter", "system-ui";
+}
+
+@supports (font-variation-settings: normal) {
+  html {
+    font-family: "Inter var", "system-ui";
+  }
+}
+
 body {
   min-height: 100vh;
   --mainBackground: #fff;
