--- a/src/Components/SideContext/ContextualSide/ContextualSide.css
+++ b/src/Components/SideContext/ContextualSide/ContextualSide.css
@@ -25,8 +25,15 @@
   padding: 18px 0;
 }
 
-.color-table th {
+.color-table__header {
   text-align: left;
   color: #7c7a7a;
   padding-right: 8px;
+  width: 100px;
+}
+
+.color-table__header span {
+  background: #e9e9e9;
+  padding: 2px 4px;
+  border-radius: 3px;
 }
