--- a/src/styles.css
+++ b/src/styles.css
@@ -104,6 +104,16 @@ body {
   outline-offset: none;
 }
 
+.color-wheel--dot--selected-true:after {
+  /* background: green; */
+  width: var(--dotSize);
+  height: var(--dotSize);
+  content: "✅";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .badge--alpha {
   font-size: 10px;
   color: #3f3f3f;
