--- a/src/Components/SideContext/ContextualSide/ContextualSide.css
+++ b/src/Components/SideContext/ContextualSide/ContextualSide.css
@@ -43,3 +43,21 @@
   padding: 2px 4px;
   border-radius: 3px;
 }
+
+.notification--wrapper {
+  color: #fff;
+  position: absolute;
+  bottom: 24px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+}
+
+.notification {
+  background: black;
+  border-radius: 8px;
+  padding: 12px 16px;
+  display: inline;
+}
