--- a/src/Components/SideContext/ContextualSide/ContextualSide.css
+++ b/src/Components/SideContext/ContextualSide/ContextualSide.css
@@ -31,7 +31,7 @@
   padding: 18px 0;
 }
 
-.color-table__header {
+.color-table .color-table__header {
   text-align: left;
   color: #7c7a7a;
   padding-right: 8px;
@@ -60,4 +60,20 @@
   border-radius: 8px;
   padding: 12px 16px;
   display: inline;
+}
+
+.header-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
+.header-wrapper h5,
+.header-wrapper h2 {
+  margin: 0;
+}
+
+.table-cell-copy {
+  user-select: all;
 }
