--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@ html {
 
 body {
   min-height: 100vh;
-  --mainBackground: #fff;
+  --mainBackground: var(--color-theme-background--shade-1);
   background: var(--mainBackground);
 }
 
@@ -21,17 +21,19 @@ body {
 .App {
   display: grid;
   grid-template-columns: 367px 1fr;
+  background: var(--color-theme-background--shade-1);
 }
 
 .sidebar--wrapper {
-  background: #f7f8fa;
+  background: var(--color-theme-background--shade-4);
 }
 
 .sidebar--inner,
 .sidebar__contextual {
   position: fixed;
   width: 367px;
-  background: #f7f8fa;
+  background: var(--color-theme-background--shade-2);
+  color: var(--color-theme-text);
   padding: 24px;
   min-height: 100vh;
   height: 100%;
@@ -50,6 +52,8 @@ body {
 
 .button {
   background: #3c7bcd;
+  width: 100%;
+  border-radius: 3px;
   border: 1px solid #3c7bcd;
   padding: 12px 16px;
   color: #fff;
@@ -92,9 +96,10 @@ body {
   border-radius: var(--dotBorderRadius);
   transition: box-shadow 0.3s ease;
   outline-offset: 2px;
-  outline: 0px solid var(--dotBackground);
-  outline: 2px solid var(--mainBackground);
+  outline: 0px solid var(--color-theme-background--shade-1);
+  outline: 2px solid var(--color-theme-background--shade-1);
   outline: var(--dotOutlineStyle);
+  outline-color: var(--color-theme-background--shade-3);
   background: var(--dotBackground);
 }
 
@@ -106,7 +111,7 @@ body {
 
 .badge--alpha {
   font-size: 10px;
-  color: #3f3f3f;
+  color: var(--color-theme-text--subtle);
   font-weight: 700;
   text-transform: uppercase;
 }
@@ -139,6 +144,36 @@ p {
 
 .controls > div {
   width: 100%;
+}
+
+.eye-dropper-color-chip {
+  margin-top: 8px;
+  padding: 12px 16px;
+  display: flex;
+  border-radius: 24px;
+  justify-content: space-between;
+  align-items: center;
+  background: var(--color-theme-background--shade-3);
+}
+
+.eye-dropper-color-chip--text {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  cursor: pointer;
+}
+
+.eye-dropper-color-swatch {
+  width: 16px;
+  height: 16px;
+  content: "";
+  display: inline-block;
+  border-radius: 50%;
+  padding-right: 8px;
+}
+
+.alert-card .ax-alert-card__content {
+  color: var(--color-theme-text);
 }
 
 * {
