--- a/src/Components/SideContext/DefaultSide/EyeDropper/EyeDropper.css
+++ b/src/Components/SideContext/DefaultSide/EyeDropper/EyeDropper.css
@@ -5,6 +5,7 @@
   border-radius: 24px;
   justify-content: space-between;
   align-items: center;
+  height: 48px;
   background: var(--color-theme-background--shade-3);
 }
 
@@ -22,4 +23,8 @@
   display: inline-block;
   border-radius: 50%;
   padding-right: 8px;
+}
+
+.color-match {
+  padding-top: 1rem;
 }
